[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kronos"
version = "1.0.2"
description = "A python package to deal with time, analysis and logging"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [
    {name = "Gustavo Aragão", email = "gustavo.s.aragao.2003@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
dependencies = [
    "requests>=2.20.0",
]

[project.urls]
"Homepage" = "https://github.com/devKaos117/Kronos.py"
"Bug Tracker" = "https://github.com/devKaos117/Kronos.py/issues"

[tool.setuptools]
packages = ["kronos"]